# gdrivesyncvala

./: COPYING  Makefile  Makefile.in  README  README.md  aclocal.m4  auth.vala  build.sh  configure  configure.ac  driveapi.vala  gdrivesync.vala  libtool
src/: Makefile  Makefile.am  Makefile.in  auth.vala  authinfo.vala  config.vapi  driveapi.vala  drivefile.vala  file.vala  gconf.vala  gconfhelper.vala  gdrivesync.vala  localmeta.vala
